--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,17 @@
     <string name="sex">Sex:</string>
     <string name="fem">Female</string>
     <string name="masc">Male</string>
+    <string name="name_user">Seu Nome</string>
+    <string name="email_user">seuemail@gmail.com</string>
+    <string name="games_finished">Games Finished</string>
+    <string name="currently_playing">Currently Playing</string>
+    <string name="idade_user">Age</string>
+    <string name="level_user">Seu level</string>
 
-    <string-array name="video_games">
+<!--    <string-array name="video_games">
         <item>PlayStation</item>
         <item>Xbox</item>
         <item>Super Nintendo</item>
         <item>Nintendo Switch</item>
-    </string-array>
+    </string-array>-->
 </resources>
